At least 16px input elements on mobile to prevent zooming

--- a/source/css/site.css.scss
+++ b/source/css/site.css.scss
@@ -110,6 +110,11 @@
   .full-xs {
     width: 100%;
   }
+
+  input[type=text],
+  input[type=email] {
+    font-size: 16px;
+  }
 }
 
 @media print {
